--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="https://assets.cammy.dev/camcares/assets/care%20clover.png">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/initiatives.css">
+    <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     <div class="container">
         <div class="navbar">
             <a href="/">
-                <img src="https://assets.cammy.dev/camcares/assets/care%20clover.png" class="logo">  
+                <h1>dana</h1> 
             </a>
              <nav>
                 <ul id="menuList">
@@ -45,38 +44,17 @@
                 <img class="cam-img-1" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg">
         </div>
     </div>
-    <div class="colums">
-        <div class="ini-col-1">
-            <h2>Viewboard Announcments Initiative</h2>
-            <p class="col-subtext">This is a proposed initiative by Cameron Cares to use the Viewboards in school for daily announcments and informing students of daily events.</p>
-            <br>
-                <div class="learn-cta">
-                    <a href="https://assets.cammy.dev/camcares/docs/coc23.pdf" class="learn-cta">
-                        <button class="button-learn-more" type="button">Learn More</button>
-                    </a>
-                </div>
+    <div class="sections" id="cam-section-3">
+
+        <div id="cam-section-text-3">
+            <h1 class="cam-header-3">Key Club Krispy Kreme Fundraiser</h1>
+            <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
         </div>
-        <div class="ini-col-2">
-            <h2>Viewboard Announcments Initiative</h2>
-            <p class="col-subtext">This is a proposed initiative by Cameron Cares to use the Viewboards in school for daily announcments and informing students of daily events.</p>
-            <br>
-                <div class="learn-cta">
-                    <a href="docs.cammy.dev" class="learn-cta">
-                        <button class="button-learn-more" type="button">Learn More</button>
-                    </a>
-                </div>
-        </div>
-        <div class="ini-col-3">
-            <h2>Viewboard Announcments Initiative</h2>
-            <p class="col-subtext">This is a proposed initiative by Cameron Cares to use the Viewboards in school for daily announcments and informing students of daily events.</p>
-            <br>
-                <div class="learn-cta">
-                    <a href="docs.cammy.dev" class="learn-cta">
-                        <button class="button-learn-more" type="button">Learn More</button>
-                    </a>
-                </div>
+        <div id="cam-img-box-3">
+            <img class="cam-img-3" src="https://cammydev.sirv.com/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
         </div>
     </div>
+
     <script>
         var menuList = document.getElementById("menuList");
     
