--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="navbar">
             <a href="/">
-                <h1>dana</h1> 
+                <h1>dana</h1><h1>chehab.</h1>
             </a>
              <nav>
                 <ul id="menuList">
