--- a/index.html
+++ b/index.html
@@ -17,28 +17,12 @@
             <a href="/">
                 <h1>dana</h1><h1>chehab.</h1>
             </a>
-             <nav>
-                <ul id="menuList">
-                    <li><a href="/">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/contact">Contact</a></li>
-                    <a href="/initiatives">
-                        <button>Iniatiatives</button>
-                    </a>
-                </ul>
-            </nav>
-            <img src="https://assets.cammy.dev/camcares/assets/menu%20bar.png" class="menu-icon" onclick="togglemenu()">
         </div>
         <div class="row">
-
             <div class="col-1">
                 <h1 class="cam-header-1">Hello, I'm Cameron!</h1>
                 <h2>Placeholder H2</h2>
                 <p class="cam-subtext-1">Placeholder paragraph text.</p>
-                <br>
-                <div class="learn-cta-1">
-                    <button class="button-learn-more-1" type="button">Learn More</button>
-                </div>
             </div>
             <div class="col-2">
                 <img class="cam-img-1" src="https://assets.cammy.dev/cameron.dev/assets/cameron.jpg">
@@ -50,25 +34,7 @@
             <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
         </div>
         <div id="cam-img-box-3">
-            <img class="cam-img-3" src="https://cammydev.sirv.com/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
-        </div>
-    </div>
-    <div class="sections" id="cam-section-3">
-        <div id="cam-section-text-3">
-            <h1 class="cam-header-3">Key Club Krispy Kreme Fundraiser</h1>
-            <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
-        </div>
-        <div id="cam-img-box-3">
-            <img class="cam-img-3" src="https://cammydev.sirv.com/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
-        </div>
-    </div>
-    <div class="sections" id="cam-section-3">
-        <div id="cam-section-text-3">
-            <h1 class="cam-header-3">Key Club Krispy Kreme Fundraiser</h1>
-            <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
-        </div>
-        <div id="cam-img-box-3">
-            <img class="cam-img-3" src="https://cammydev.sirv.com/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
+            <img class="cam-img-3" src="https://assets.cammy.dev/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
         </div>
     </div>
 </body>
