--- a/index.html
+++ b/index.html
@@ -37,5 +37,23 @@
             <img class="cam-img-3" src="https://assets.cammy.dev/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
         </div>
     </div>
+    <div class="sections" id="cam-section-3">
+        <div id="cam-section-text-3">
+            <h1 class="cam-header-3">Key Club Krispy Kreme Fundraiser</h1>
+            <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
+        </div>
+        <div id="cam-img-box-3">
+            <img class="cam-img-3" src="https://assets.cammy.dev/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
+        </div>
+    </div>
+    <div class="sections" id="cam-section-3">
+        <div id="cam-section-text-3">
+            <h1 class="cam-header-3">Key Club Krispy Kreme Fundraiser</h1>
+            <p class="cam-subtext-3">Centennial High School's Key Club is hosting a donut fundraiser. This fundraiser is  </p>
+        </div>
+        <div id="cam-img-box-3">
+            <img class="cam-img-3" src="https://assets.cammy.dev/cameron.dev/assets/Key%20Club%20-%20Krispy%20Kreme%20Fundraiser%20IG%20Post%20-%20V2-%2014Oct22.jpg" alt="Cameron FY23">
+        </div>
+    </div>
 </body>
 </html>
